- Added the option to disable hud elements
- Added main player accuracy to scoreboard panel
- Added the option to change the speed of the health gain/loss animation
- Added the option to hide the timer and objective panels or only show them when the tabpanel is open
- Added the option to show names in uppercase
- Added notification and hint text options
- Added subtitle options
- Added Russian localization by Skyfrost
- Added compatibility with Press2Hold
- Added compatibility with Big Lobby
- Added compatibility with Assault States
- Added compatibility with Burst Fire
- Added compatibility with Death Wish+
- Fixed bot weapons sometimes not showing correctly (?)
- Fixed textures and default options not loading when another mod breaks the options menu
- Fixed a crash related to the assault panel
- Fixed the hostages panel sometimes not playing the assault end animation
- Fixed a rare crash related to beardlib custom music
- Fixed chat messages not being colored correctly when the heister names are turned off
- Fixed teammates bleedout timers and interaction texts not being effected by hud scale
- Fixed mutators list on the tab panel not being affected by hud scale
- Fixed the heist timer going nuts after the one hour mark when the panel is scaled
- Fixed waypoints being infront of some parts of the assault panel
- Fixed police badge appearing after you kill the captain when the badge is turned off

Version 1.0 (2017.09.29)
- Civilian kills now increment the normal kill counter as well
- Fixed ex-president heal bar being retarded
- Fixed scoreboard panels not being correctly aligned when there are no bots
- Fixed main players ping sometimes having the wrong color
- Fixed downed interaction showing the complete animation even when the interaction didnt complete
- Fixed crime spree level not being the correct size on the police badge when the assault panel is not the default size
- Made the background of the suspicion panel a bit more transparent
