@@ -1,6 +1,6 @@
 {
 	"VoidUI_endless_assault" : "Endless police assault",
-	"VoidUI_assault_1" : "Need more crossovers",
+	"VoidUI_assault_1" : "Yep, that's John Cleese and a dead nazi",
 	"VoidUI_assault_2" : "Haha, your payday is haunted, haha",
 	"VoidUI_assault_3" : "Eat Captain to End Ass",
 	"VoidUI_assault_4" : ":awkward:",
