@@ -167,7 +167,7 @@
 			"default_value" : 160,
 			"max" : 340,
 			"min" : 100,
-			"step" : 0.01,
+			"step" : 0.1,
 			"localized" :  true
 			"priority" : 1
 		}
